# cses2humio

./: .gitignore  Dockerfile  README.md  cses2humio.env.example  pyproject.toml  requirements.txt  setup.cfg  siem-connector-enriched.yaml
.github/: dependabot.yml
.github/workflows/: CI.yml  codeql-analysis.yml
cses2humio/: app.py
