[metadata]
name = cses2humio
version = attr: hytoq.__version__
author = Kevin K. Kragh
author_email = kra@trifork.security
description = CrowdStrike Event Stream to Humio
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Trifork-Security/cses2humio
project_urls =
    Bug Tracker = https://github.com/Trifork-Security/cses2humio/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    requests>=2.27.1
    crowdstrike-falconpy>=1.0.3

[options.entry_points]
console_scripts =
    cses2humio = cses2humio.app:cli
